<resources>
    <string name="app_name">BestPractices</string>
    <string name="text_trips_arg">Trips: %1$d</string>
    <string name="simple_paging">Simple paging</string>
    <string name="dropdown_list">Dropdown List</string>
    <string name="mvi_example">Mvi example</string>
    <string name="auth">Auth</string>
    <string name="auth_canceled">Auth canceled</string>
    <string name="get_user_error">User error</string>
    <string name="get_user_info">Get user info</string>
    <string name="corrupt_access_token">Corrupt access token</string>
    <string name="logout">Logout</string>
    <string name="auth_login">Auth_login</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="location_tracking">Location tracking</string>
    <string name="lottie_animation">Lottie animation</string>
    <string name="notification">Notification</string>
    <string name="bipmap_with_stroke">Bipmap with stroke</string>
    <string name="storages">Storages</string>
    <string name="custom_view">Custom View</string>
    <string name="alarm">Alarm</string>
    <string name="gestures">Gestures</string>
    <string name="optimize_image">Optimize image</string>
    <string name="coroutines_practice">Coroutines practice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cant_move_user">Cant move user</string>
    <string name="cant_delete_user">Cant delete user</string>
    <string name="cant_load_user_details">Cant load user details</string>
    <string name="user_has_been_deleted">User has been deleted</string>
</resources>